infrastructure/k8s/apps/admin-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
  namespace: default
spec:
  selector:
    app: admin-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
